--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ titlecase: true
 owner:
   name: Rosie Hamilton
   avatar: avatar.jpg
-  bio: "Level 100 Software Tester, Level 1 Golang Developer."
+  bio: "Software Tester, Violinist, Gopher, Data Explorer, Yoga Addict, Honest Blogger, PC Gamer, Curious Learner, Creator of my own unique path through life."
   email:
   disqus-shortname:
   twitter: rosicadia
